--- a/.github/workflows/playwright-ci.yml
+++ b/.github/workflows/playwright-ci.yml
@@ -41,6 +41,9 @@ jobs:
           name: test-results
           path: test-results/
           retention-days: 7
+          
+      - name: Ensure downloads folder exists
+        run: mkdir -p downloads    
 
       - name: Upload invoice
         uses: actions/upload-artifact@v4
